src/toggl_api.h

    TOGGL_EXPORT void toggl_set_key_start(
        void *context,
        const char_t *value);
    // You must free() the result
    TOGGL_EXPORT char_t *toggl_get_key_start(
        void *context);
    TOGGL_EXPORT void toggl_set_key_show(
        void *context,
        const char_t *value);
    // You must free() the result
    TOGGL_EXPORT char_t *toggl_get_key_show(
        void *context);
    TOGGL_EXPORT void toggl_set_key_modifier_show(
        void *context,
        const char_t *value);
    // You must free() the result
    TOGGL_EXPORT char_t *toggl_get_key_modifier_show(
        void *context);
    TOGGL_EXPORT void toggl_set_key_modifier_start(
        void *context,
        const char_t *value);
    // You must free() the result
    TOGGL_EXPORT char_t *toggl_get_key_modifier_start(
        void *context);
    TOGGL_EXPORT bool_t toggl_logout(
        void *context);
    TOGGL_EXPORT bool_t toggl_clear_cache(
        void *context);
    // returns GUID of the started time entry. you must free() the result
    TOGGL_EXPORT char_t *toggl_start_with_current_running(
        void *context,
        const char_t *description,
        const char_t *duration,
        const uint64_t task_id,
        const uint64_t project_id,
        const char_t *project_guid,
        const char_t *tags,
        const bool_t prevent_on_app,
        const uint64_t started,
        const uint64_t ended,
        const bool_t stop_current_running);
    // returns GUID of the started time entry. you must free() the result
    TOGGL_EXPORT char_t *toggl_start(
        void *context,
        const char_t *description,
        const char_t *duration,
        const uint64_t task_id,
        const uint64_t project_id,
        const char_t *project_guid,
        const char_t *tags,
        const bool_t prevent_on_app,
        const uint64_t started,
        const uint64_t ended);
    // Create an Empty Time Entry without stopping the running TE
    TOGGL_EXPORT char_t *toggl_create_empty_time_entry(
        void *context,
        const uint64_t started,
        const uint64_t ended);
    // returns GUID of the new project. you must free() the result
    TOGGL_EXPORT char_t *toggl_add_project(
        void *context,
        const char_t *time_entry_guid,
        const uint64_t workspace_id,
        const uint64_t client_id,
        const char_t *client_guid,
        const char_t *project_name,
        const bool_t is_private,
        const char_t *project_color);
    // returns GUID of the new client. you must free() the result
    TOGGL_EXPORT char_t *toggl_create_client(
        void *context,
        const uint64_t workspace_id,
        const char_t *client_name);
    TOGGL_EXPORT bool_t toggl_set_default_project(
        void *context,
        const uint64_t pid,
        const uint64_t tid);
    TOGGL_EXPORT void toggl_get_project_colors(
        void *context);
    TOGGL_EXPORT void toggl_get_countries(
        void *context);