app/lib/src/native/toggl_api_generated.dart


  void toggl_set_key_start(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _toggl_set_key_start(context, value);
  }

  late final _toggl_set_key_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_set_key_start');
  late final _toggl_set_key_start = _toggl_set_key_startPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_get_key_start(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_key_start(context);
  }

  late final _toggl_get_key_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_get_key_start');
  late final _toggl_get_key_start = _toggl_get_key_startPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_key_show(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _toggl_set_key_show(context, value);
  }

  late final _toggl_set_key_showPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_set_key_show');
  late final _toggl_set_key_show = _toggl_set_key_showPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_get_key_show(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_key_show(context);
  }

  late final _toggl_get_key_showPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_get_key_show');
  late final _toggl_get_key_show = _toggl_get_key_showPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_key_modifier_show(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _toggl_set_key_modifier_show(context, value);
  }

  late final _toggl_set_key_modifier_showPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_set_key_modifier_show');
  late final _toggl_set_key_modifier_show = _toggl_set_key_modifier_showPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_get_key_modifier_show(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _toggl_get_key_modifier_show(context);
  }

  late final _toggl_get_key_modifier_showPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_get_key_modifier_show');
  late final _toggl_get_key_modifier_show = _toggl_get_key_modifier_showPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  void toggl_set_key_modifier_start(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _toggl_set_key_modifier_start(context, value);
  }

  late final _toggl_set_key_modifier_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_set_key_modifier_start');
  late final _toggl_set_key_modifier_start = _toggl_set_key_modifier_startPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  /// You must free() the result
  ffi.Pointer<ffi.Char> toggl_get_key_modifier_start(
    ffi.Pointer<ffi.Void> context,
  ) {
    return _toggl_get_key_modifier_start(context);
  }

  late final _toggl_get_key_modifier_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('toggl_get_key_modifier_start');
  late final _toggl_get_key_modifier_start = _toggl_get_key_modifier_startPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int toggl_logout(ffi.Pointer<ffi.Void> context) {
    return _toggl_logout(context);
  }

  late final _toggl_logoutPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_logout',
      );
  late final _toggl_logout = _toggl_logoutPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int toggl_clear_cache(ffi.Pointer<ffi.Void> context) {
    return _toggl_clear_cache(context);
  }

  late final _toggl_clear_cachePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_clear_cache',
      );
  late final _toggl_clear_cache = _toggl_clear_cachePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// returns GUID of the started time entry. you must free() the result
  ffi.Pointer<ffi.Char> toggl_start_with_current_running(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> description,
    ffi.Pointer<ffi.Char> duration,
    int task_id,
    int project_id,
    ffi.Pointer<ffi.Char> project_guid,
    ffi.Pointer<ffi.Char> tags,
    int prevent_on_app,
    int started,
    int ended,
    int stop_current_running,
  ) {
    return _toggl_start_with_current_running(
      context,
      description,
      duration,
      task_id,
      project_id,
      project_guid,
      tags,
      prevent_on_app,
      started,
      ended,
      stop_current_running,
    );
  }

  late final _toggl_start_with_current_runningPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
            ffi.Uint64,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Uint64,
            ffi.Uint64,
            ffi.Int,
          )
        >
      >('toggl_start_with_current_running');
  late final _toggl_start_with_current_running =
      _toggl_start_with_current_runningPtr
          .asFunction<
            ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              int,
              int,
            )
          >();

  /// returns GUID of the started time entry. you must free() the result
  ffi.Pointer<ffi.Char> toggl_start(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> description,
    ffi.Pointer<ffi.Char> duration,
    int task_id,
    int project_id,
    ffi.Pointer<ffi.Char> project_guid,
    ffi.Pointer<ffi.Char> tags,
    int prevent_on_app,
    int started,
    int ended,
  ) {
    return _toggl_start(
      context,
      description,
      duration,
      task_id,
      project_id,
      project_guid,
      tags,
      prevent_on_app,
      started,
      ended,
    );
  }

  late final _toggl_startPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
            ffi.Uint64,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Uint64,
            ffi.Uint64,
          )
        >
      >('toggl_start');
  late final _toggl_start = _toggl_startPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
        )
      >();

  /// Create an Empty Time Entry without stopping the running TE
  ffi.Pointer<ffi.Char> toggl_create_empty_time_entry(
    ffi.Pointer<ffi.Void> context,
    int started,
    int ended,
  ) {
    return _toggl_create_empty_time_entry(context, started, ended);
  }

  late final _toggl_create_empty_time_entryPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Void>,
            ffi.Uint64,
            ffi.Uint64,
          )
        >
      >('toggl_create_empty_time_entry');
  late final _toggl_create_empty_time_entry = _toggl_create_empty_time_entryPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, int, int)
      >();

  /// returns GUID of the new project. you must free() the result
  ffi.Pointer<ffi.Char> toggl_add_project(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> time_entry_guid,
    int workspace_id,
    int client_id,
    ffi.Pointer<ffi.Char> client_guid,
    ffi.Pointer<ffi.Char> project_name,
    int is_private,
    ffi.Pointer<ffi.Char> project_color,
  ) {
    return _toggl_add_project(
      context,
      time_entry_guid,
      workspace_id,
      client_id,
      client_guid,
      project_name,
      is_private,
      project_color,
    );
  }

  late final _toggl_add_projectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Uint64,
            ffi.Uint64,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_add_project');
  late final _toggl_add_project = _toggl_add_projectPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// returns GUID of the new client. you must free() the result
  ffi.Pointer<ffi.Char> toggl_create_client(
    ffi.Pointer<ffi.Void> context,
    int workspace_id,
    ffi.Pointer<ffi.Char> client_name,
  ) {
    return _toggl_create_client(context, workspace_id, client_name);
  }

  late final _toggl_create_clientPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Void>,
            ffi.Uint64,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('toggl_create_client');
  late final _toggl_create_client = _toggl_create_clientPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Void>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  int toggl_set_default_project(
    ffi.Pointer<ffi.Void> context,
    int pid,
    int tid,
  ) {
    return _toggl_set_default_project(context, pid, tid);
  }

  late final _toggl_set_default_projectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Uint64, ffi.Uint64)
        >
      >('toggl_set_default_project');
  late final _toggl_set_default_project = _toggl_set_default_projectPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, int, int)>();

  void toggl_get_project_colors(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_project_colors(context);
  }

  late final _toggl_get_project_colorsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'toggl_get_project_colors',
      );
  late final _toggl_get_project_colors = _toggl_get_project_colorsPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void toggl_get_countries(ffi.Pointer<ffi.Void> context) {
    return _toggl_get_countries(context);
  }
